add models for study's materials (Question, ProgrammingTask, CheckKnowledge, Theory, Lesson)